<resources>
    <string name="app_name">NavigationDemo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u><b>Forgot Password?</b></u></string>
    <string name="alert_email_blank">Email can\'t be blank.</string>
    <string name="alert_email_invalid">Please enter valid email address.</string>
    <string name="alert_password_blank">Password can\'t be blank.</string>
    <string name="alert_password_invalid">Password must contain minimum 4 and maximum 8 characters.</string>
    <string name="reset_password">Reset Password</string>
    <string name="not_yet_a_member_sign_up">Not yet a member? <b><font color='#OOOOOO'>Sign Up</font></b></string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password_reset_msg">Enter your email below to receive your password reset instruction</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="alert_email_sent">An Email is sent to your registered email address.</string>
    <string name="ok">OK</string>
    <string name="alert_username_blank">Username can\'t be blank.</string>
    <string name="alert_username_invalid">Username must contain minimum 3 characters.</string>
    <string name="alert_phone_number_blank">Phone number can\'t be blank.</string>
    <string name="alert_phone_number_invalid">Please enter a valid phone number.</string>
    <string name="notification">Notification</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="str_import">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="name">Sneha Sarkar</string>
    <string name="my_email_id">sneha@gmail.com</string>
</resources>
