<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_150dp"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/dimen_10dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="@dimen/dimen_80dp"
        android:layout_height="@dimen/dimen_80dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/dimen_8dp"
        app:srcCompat="@drawable/ic_girl" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_8dp"
        android:text="@string/name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font_18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_email_id"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font_14sp" />
</LinearLayout>
