<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:orientation="vertical"
    android:padding="@dimen/dimen_10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/password_reset_msg"
        android:textSize="@dimen/font_16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_email" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_forgot_password_tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_forgot_password_tetEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="45"
                android:maxLines="1"
                android:outlineProvider="bounds" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/fragment_forgot_password_btnResetPassword"
        style="@style/StyleCommonMaterialButton"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/reset_password" />
</LinearLayout>