<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/dimen_5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_email" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fragment_signin_tilEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fragment_signin_tetEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLength="45"
                        android:maxLines="1"
                        android:outlineProvider="bounds" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/dimen_5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_password" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fragment_signin_tilPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fragment_signin_tetPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:outlineProvider="bounds" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/fragment_signin_tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@color/colorBlack" />

            <android.support.design.button.MaterialButton
                android:id="@+id/fragment_signin_btnLogin"
                style="@style/StyleCommonMaterialButton"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/sign_in" />
        </LinearLayout>

        <TextView
            android:id="@+id/fragment_signin_tvSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/not_yet_a_member_sign_up"
            android:textColor="@color/colorBlack" />
    </LinearLayout>
</ScrollView>