<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:fillViewport="true"
    android:padding="@dimen/dimen_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_user" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_signup_tilUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fragment_signup_tetUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:maxLength="45"
                    android:maxLines="1"
                    android:outlineProvider="bounds" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_email" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_signup_tilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fragment_signup_tetEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="45"
                    android:maxLines="1"
                    android:outlineProvider="bounds" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_phone" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_signup_tilPhoneNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fragment_signup_tetPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:outlineProvider="bounds" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_password" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_signup_tilPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fragment_signup_tetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:outlineProvider="bounds" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.button.MaterialButton
            android:id="@+id/fragment_signup_btnSignUp"
            style="@style/StyleCommonMaterialButton"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/sign_up" />
    </LinearLayout>
</ScrollView>